gestione delle serie

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,11 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:uno]
-platform = atmelavr
+ platform = atmelavr
 board = uno
 framework = arduino
+
+;[env:nodemcu-32s]
+;platform = espressif32
+;board = nodemcu-32s
+;framework = arduino
