--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:uno]
- platform = atmelavr
-board = uno
+;[env:uno]
+;platform = atmelavr
+;board = uno
+;framework = arduino
+
+
+[env:megaatmega2560]
+platform = atmelavr
+board = megaatmega2560
 framework = arduino
 
 ;[env:nodemcu-32s]
