--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-;[env:uno]
-;platform = atmelavr
-;board = uno
-;framework = arduino
-
-
-[env:megaatmega2560]
+[env:uno]
 platform = atmelavr
-board = megaatmega2560
+board = uno
 framework = arduino
 
 ;[env:nodemcu-32s]
