--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps = https://github.com/johnrickman/LiquidCrystal_I2C
 
 ;[env:nodemcu-32s]
 ;platform = espressif32
