--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_deps = https://github.com/johnrickman/LiquidCrystal_I2C
+build_flags = -Wno-unknown-pragmas
 
 ;[env:nodemcu-32s]
 ;platform = espressif32
